--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ homepage: https://github.com/hemanthrajv/flutter_compass
 dependencies:
   flutter:
     sdk: flutter
-  rxdart: ^0.21.0
+  rxdart: ^0.22.2
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
